--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,14 @@ requires-python = ">=3.11"
 
 dependencies = [
     "pytest>=7.0.0",
-    # 필요한 패키지 추가
+    "fastapi",
+    "boto3",
+    "python-dotenv",
+    "pydantic",
+    "uvicorn",
+    "httpx"
 ]
 
 [tool.uv]  # uv 사용 시 필요
+[too.pytest.ini_options]
+addopts="-v"
