--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
         uses: astral-sh/ruff-action@v3
         with:
           args: format --check .    # 6. Ruff로 코드 포맷 검사
+          
+      - name: Ruff Format auto
+        run: ruff format .
 
       - name: Run uv audit
         run: uv run uv-audit               # 7. 패키지 취약점 점검
