--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
                                     # 5. Ruff로 코드 린트 검사
                                     
       - name : Ruff Fix
-        run: format .
+        run: ruff format .
 
       - name: Ruff Format Check
         uses: astral-sh/ruff-action@v3
