--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Install uv audit
         run: uv pip install uv-audit
 
+      - name: Create .env file
+        run: |
+          echo "S3_BUCKET=${{ secrets.S3_BUCKET }}" > .env
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
+          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env
+
       - name: Ruff Lint
         uses: astral-sh/ruff-action@v3
         with:
