--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main", "feature/managefile" ]         
+    branches: [ "main", "feature/**" ]         
   pull_request:
-    branches: [ "main", "feature/managefile" ]         
+    branches: [ "main", "feature/**" ]         
   workflow_dispatch:                
 
 jobs:
