--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Install Python 3.11 with uv
         run: uv python install 3.11
 
-      - name: Install dependencies from requirements.txt
-        run: uv pip install -r requirements.txt
+      - name: Install dependencies without venv
+        run: uv pip install --system -r requirements.txt
+
 
       - name: Create .env file
         run: echo "${{ secrets.ENV_FILE }}" | tr '\n' '\n' > .env
