--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,11 @@ jobs:
       - name: Install Python 3.11 with uv
         run: uv python install 3.11
 
-      - name: Install dependencies without venv
-        run: uv pip install --system -r requirements.txt
+      - name: Create virtual environment
+        run: uv venv
+
+      - name: Install dependencies
+        run: uv pip install -r requirements.txt
 
 
       - name: Create .env file
