fix: 의존성 추가 및 Pydantic V2 마이그레이션

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,11 @@ dependencies = [
     "uvicorn",
     "httpx",
     "botocore",
-    "aiofiles"
-]
+    "aiofiles",
+    "sqlalchemy",
+    "alembic",
+    "psycopg2-binary"
+] 
 
 [tool.pytest.ini_options]
 addopts = "-v"
