fix: 불필요한 import 제거 및 pyproject.toml 개선
- database.py에서 사용되지 않는 sys import 제거 (F401 해결)
- pyproject.toml 메타데이터 표준화 및 파싱 오류 해결

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,14 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "api"
+name = "bizlenz-api"
 version = "0.1.0"
-description = "BackEnd project"
+description = "BizLenz AI Business Plan Analysis API"
+readme = "README.md"
 requires-python = ">=3.11"
+authors = [
+    {name = "BizLenz Team", email = "team@bizlenz.com"}
+]
 
 dependencies = [
     "pytest>=7.0.0",
