--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,7 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode.env
 .env.*
 *.pem
+.env
+src/.env
+.env.*
+*.pem
