--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ python-dotenv>=1.0
 httpx>=0.27
 pytest>=8
 pytest-asyncio>=0.23
-pydantic>=2.6,<3.0google-generativeai==0.7.2
+pydantic>=2.6,<3.0
+google-generativeai==0.7.2
