--- a/template.yaml
+++ b/template.yaml
@@ -1,35 +1,135 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
+Description: BizLenz FastAPI on Lambda (SAM)
+
+Globals:
+  Function:
+    Runtime: python3.11
+    Timeout: 30
+    MemorySize: 512
+    Tracing: Active
+
+Parameters:
+  StageName:
+    Type: String
+    Default: prod
+    Description: API Gateway stage name
+  CognitoRegion:
+    Type: String
+    Default: ap-northeast-2
+  CognitoUserPoolId:
+    Type: String
+    Default: ""
+  CognitoClientId:
+    Type: String
+    Default: ""
+  CognitoClientSecret:
+    Type: String
+    Default: ""
+    NoEcho: true
+    Description: Use Secrets Manager dynamic reference in production
+  UseHttpApi:
+    Type: String
+    AllowedValues: ["true","false"]
+    Default: "false"
+    Description: Use AWS::Serverless::HttpApi instead of REST Api
 
 Resources:
-  EvaluateFunction:
+  # API Gateway (REST) - 기본값
+  RestApi:
+    Type: AWS::Serverless::Api
+    Condition: UseRestApi
+    Properties:
+      StageName: !Ref StageName
+      EndpointConfiguration: REGIONAL
+      TracingEnabled: true
+      OpenApiVersion: '3.0.1'
+      Cors:
+        AllowMethods: "'GET,POST,PUT,PATCH,DELETE,OPTIONS'"
+        AllowHeaders: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+        AllowOrigin: "'*'"
+
+  # API Gateway (HTTP API) - 선택
+  HttpApi:
+    Type: AWS::Serverless::HttpApi
+    Condition: UseHttp
+    Properties:
+      StageName: !Ref StageName
+      CorsConfiguration:
+        AllowOrigins:
+          - "*"
+        AllowMethods:
+          - GET
+          - POST
+          - PUT
+          - PATCH
+          - DELETE
+          - OPTIONS
+        AllowHeaders:
+          - Content-Type
+          - Authorization
+
+  ApiFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: lambda_evaluate/
-      Handler: analysis.lambda_handler
-      Runtime: python3.10
-      Timeout: 60
+      FunctionName: bizlenz-fastapi
+      CodeUri: .
+      Handler: main.handler
+      Architectures:
+        - x86_64
+      Policies:
+        # 기본 실행 + 로그 생성
+        - AWSLambdaBasicExecutionRole
+        # 필요 시 Secrets Manager/SSM 권한 최소 범위로 추가
+        # - AWSSecretsManagerGetSecretValuePolicy:
+        #     SecretArn: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:your-secret-name-*
       Environment:
         Variables:
-          GEMINI_API_KEY: !Ref GeminiApiKeySecret
+          # Cognito 설정 (운영 시 Secrets Manager 동적 참조 권장: {{resolve:secretsmanager:...}})
+          COGNITO_REGION: !Ref CognitoRegion
+          COGNITO_USER_POOL_ID: !Ref CognitoUserPoolId
+          COGNITO_CLIENT_ID: !Ref CognitoClientId
+          COGNITO_CLIENT_SECRET: !Ref CognitoClientSecret
       Events:
-        EvaluateApi:
+        # REST API 사용하는 경우
+        RestProxy:
+          Condition: UseRestApi
           Type: Api
           Properties:
-            Path: /evaluate
-            Method: post
+            RestApiId: !Ref RestApi
+            Path: /{proxy+}
+            Method: ANY
+        RestRoot:
+          Condition: UseRestApi
+          Type: Api
+          Properties:
+            RestApiId: !Ref RestApi
+            Path: /
+            Method: ANY
+        # HTTP API 사용하는 경우
+        HttpProxy:
+          Condition: UseHttp
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref HttpApi
+            Path: /{proxy+}
+            Method: ANY
+        HttpRoot:
+          Condition: UseHttp
+          Type: HttpApi
+          Properties:
+            ApiId: !Ref HttpApi
+            Path: /
+            Method: ANY
 
-  GeminiApiKeySecret:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Description: "Gemini API Key for business plan evaluation"
-      GenerateSecretString:
-        SecretStringTemplate: '{}'
-        GenerateStringKey: 'api_key'
-        PasswordLength: 32
-        ExcludeCharacters: '"@/\'
+Conditions:
+  UseHttp: !Equals [!Ref UseHttpApi, "true"]
+  UseRestApi: !Equals [!Ref UseHttpApi, "false"]
 
 Outputs:
-  EvaluateApi:
-    Description: "API Gateway endpoint URL for /evaluate"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/evaluate"
+  ApiUrl:
+    Description: Invoke URL
+    Value: !If
+      - UseRestApi
+      - !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${StageName}"
+      - !Sub "https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com/${StageName}"
