--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.116.0
-uvicorn==0.35.0
+fastapi==0.111.0
+uvicorn==0.30.1
 boto3==1.39.14
 python-dotenv>=1.0
 httpx>=0.27
@@ -8,4 +8,4 @@ pytest-asyncio>=0.23
 pydantic>=2.6,<3.0
 google-generativeai==0.7.2
 botocore
-mangum
+mangum==0.17.0
