--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+*.dist-info/
+
 
 # C extensions
 *.so
@@ -202,3 +205,95 @@ src/.env
 .env
 .env.*
 *.pem
+
+# 설치된 라이브러리 폴더 (src 폴더 내)
+src/annotated_types/
+src/anyio/
+src/apiclient/
+src/bin/
+src/boto3/
+src/botocore/
+src/cachetools/
+src/certifi/
+src/charset_normalizer/
+src/click/
+src/colorama/
+src/dnspython/
+src/email_validator/
+src/fastapi/
+src/fastapi_cli/
+src/google_ai_generativelanguage/
+src/google_api_core/
+src/google_api_python_client/
+src/google_auth/
+src/google_auth_httplib2/
+src/google_generativeai/
+src/grpcio/
+src/grpcio_status/
+src/h11/
+src/httpcore/
+src/httplib2/
+src/httptools/
+src/httpx/
+src/idna/
+src/iniconfig/
+src/jmespath/
+src/jinja2/
+src/mangum/
+src/markdown_it_py/
+src/markupsafe/
+src/mdurl/
+src/orjson/
+src/packaging/
+src/pluggy/
+src/proto_plus/
+src/protobuf/
+src/pyasn1/
+src/pyasn1_modules/
+src/pydantic/
+src/pydantic_core/
+src/pygments/
+src/pyparsing/
+src/pytest/
+src/pytest_asyncio/
+src/python_dateutil/
+src/python_dotenv/
+src/python_multipart/
+src/pyyaml/
+src/requests/
+src/rich/
+src/rich_toolkit/
+src/rsa/
+src/s3transfer/
+src/shellingham/
+src/six/
+src/sniffio/
+src/starlette/
+src/tqdm/
+src/typer/
+src/typing_extensions/
+src/typing_inspection/
+src/ujson/
+src/uritemplate/
+src/urllib3/
+src/uvicorn/
+src/watchfiles/
+src/websockets/
+src/_pytest
+src/_yaml
+src/dateutil 
+src/dns 
+src/dotenv 
+src/google 
+src/googleapiclient 
+src/grpc 
+src/grpc_status 
+src/markdown_it 
+src/multipart 
+src/proto 
+src/yaml 
+src/google_auth_httplib2.py 
+src/google_generativeai-0.7.2-py3.11-nspkg.pth
+src/py.py 
+src/six.py 
+src/typing_extensions.py 
