JWT 토큰 인증 로직 처리 리팩토링

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "aiofiles",
     "sqlalchemy",
     "alembic",
-    "psycopg2-binary"
+    "psycopg2-binary",
+    "pydantic-settings",
+    "bcrypt"
 ]
 
 [tool.pytest.ini_options]
