--- a/.gitignore
+++ b/.gitignore
@@ -285,5 +285,6 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode.env
 .env.*
+!.env.example
 *.pem
 src/.env
