--- a/template.yaml
+++ b/template.yaml
@@ -9,17 +9,22 @@ Parameters:
   CognitoUserPoolArn:
     Type: String
     Description: ARN of existing Cognito User Pool (e.g., arn:aws:cognito-idp:ap-northeast-2:123456789012:userpool/ap-northeast-2_ABCdef123)
+  S3BucketName:
+    Type: String
+    Description: S3 bucket name for original files
 
 
 Globals:
   Function:
-    Runtime: python3.11
+    Runtime: python3.12
     Timeout: 10
     MemorySize: 512
     Architectures: [x86_64]
     Environment:
       Variables:
         STAGE: dev
+        GOOGLE_API_KEY: your-GOOGLE_API_KEY
+        GEMINI_MODEL_ANALYSIS: gemini-1.5-flash
 
 Resources:
   RestApi:
@@ -41,10 +46,13 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: bizlenz-fastapi-rest-proxy
-      CodeUri: .
-      Handler: main.handler
+      CodeUri: src/
+      Handler: app.main.handler
       Policies:
         - AWSLambdaBasicExecutionRole
+        - S3ReadPolicy:
+                  BucketName: bizlenz-original-files-bucket-dev
+        - AmazonRDSFullAccess
       Events:
         RootProxy:
           Type: Api
