--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ boto3>=1.28.0
 mangum>=0.17.0
 
 # Google GenAI
-google-generativeai>=0.8.0
+google-generativeai==0.7.2
 
 # Settings Management
 pydantic-settings>=2.0.0
@@ -23,7 +23,7 @@ python-jose[cryptography]
 
 # Testing
 pytest
-pytest-asyncio
+pytest-asyncio>=0.21.0
 httpx
 pytest-mock
-
+moto[all]>=5.0.0
