--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,12 +63,9 @@ jobs:
         run: uv run uv-audit
 
 
-      - name: Run Pytest
-<<<<<<< HEAD
+      - name: Run pytest
         run: uv run pytest          # 8. Pytest로 자동화 테스트 실행
-=======
-        run: uv run pytest src/app/test/test_evaluation.py        # 8. Pytest로 자동화 테스트 실행
->>>>>>> fda2ff50191ef08f3f62e0cdc2c5f38047512b0f
+
 
 
       - name: Build Docker image
